[Qt][WK2] fast/events/page-visibility-* tests fail https://bugs.webkit.org/show_bug.cgi?id=83263

Patch by Hugo Parente Lima <hugo.lima@openbossa.org> on 2012-05-17
Reviewed by Kenneth Rohde Christiansen.

Tools:

Handle "preview" state and avoid string conversion.

* WebKitTestRunner/InjectedBundle/LayoutTestController.cpp:
(WTR::LayoutTestController::setPageVisibility):

LayoutTests:

Unskip two page-visibility tests: iframe-propagation-test.html
and transition-test.html.

* platform/qt-5.0-wk2/Skipped:

Canonical link: https://commits.webkit.org/104342@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@117435 268f45cc-cd09-0410-ab3c-d52691b4dbfc